<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Dashboard">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300sp"
        app:cardElevation="@dimen/cardview_default_elevation">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:gravity="center">
    <ImageView
        android:layout_width="100sp"
        android:layout_height="70sp"

        android:src="@drawable/loginlogo"/>


    <EditText
        android:id="@+id/old_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:ems="11"
        android:singleLine="true" />

    <EditText
        android:id="@+id/new_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_new_email"
        android:inputType="textEmailAddress"

        android:ems="11"
       />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/prompt_password"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:ems="11"
        android:singleLine="true" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/new_pass"
        android:ems="11"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:gravity="center">

    <Button
        android:id="@+id/changeEmail"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/changePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/remove"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_remove"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
        <Button
            android:id="@+id/change_email_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_email"
            android:textStyle="bold" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/change_password"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sending_pass_reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_password_reset_email"
        android:textStyle="bold" />

    <Button
        android:id="@+id/remove_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/remove_user"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_out"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>





</LinearLayout>